<resources>
    <string name="app_name">Katalog Film</string>
    <string name="title_detail">Detail Film</string>
    <string name="telusuri">Search for movie titles</string>
    <string name="tagline">With great power comes great responsibility.</string>
    <string name="judul_film">Captain America: The First Avenger</string>
    <string name="release_date">24-12-2018</string>
    <string name="texthintresult">We found %1s movies with query %2s</string>
    <string name="overview_film">Predominantly set during World War II, Steve Rogers is a sickly man from Brooklyn whos transformed into super-soldier Captain America to aid in the war effort. Rogers must stop the Red Skull – Adolf Hitlers ruthless head of weaponry, and the leader of an organization that intends to use a mysterious device of untold powers for world domination.</string>
    <string name="rating">Rating</string>
    <string name="duration">Duration</string>
    <string name="language">Language</string>
    <string name="release_date_text">Release Date</string>
    <string name="overview">Overview</string>
    <string name="cari">Search</string>
    <string name="search">Search</string>
    <string name="film">Film</string>
    <string name="account">Account</string>
    <string name="stNull">Enter the movie title you want to search.</string>
    <string name="stError">A problem has occurred!</string>
    <string name="setting">Setting</string>
    <string name="now">Now</string>
    <string name="up_coming">Up Coming</string>
    <string name="message_exit">Press again to exit</string>
    <string name="pilih_bahasa">Select a language</string>
    <string name="txt_bahasa">Language</string>
    <string name="information">Information</string>
    <string name="about">About</string>
    <string name="about_application">About Application</string>
    <string name="copyright">Copyright © 2019. Gusti Ngurah Mertayasa</string>
    <string name="application_name">Application name</string>
    <string name="version">Version</string>
    <string name="update">Update</string>
    <string name="updateV">January 2019</string>
    <string name="versi_app">1.0 Beta</string>
    <string name="belum_melakukan_pencarian">Not Searching</string>
    <string name="silahkan_cari_judul_film_yang_anda_inginkan_melalui_menu_pencarian_di_atas">Please search for the movie title you want through the search menu above.</string>
    <string name="favorite">Favorite</string>
    <string name="add_favorite">This film has been add to your favorite!</string>
    <string name="remove_favorite">This film has been remove from your favorite!</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="no_data">No Data</string>
    <string name="favorit_film">Favorite Film</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="reminder">Reminder</string>
    <string name="turn_it_on_to_get_notifications_every_day">Turn on to get notifications every 7am.</string>
    <string name="release_today_reminder">Release Today Reminder</string>
    <string name="turn_it_on_to_get_new_movie_notifications">Turn on to get new movie notifications every 8am.</string>
    <string name="message_daily_reminder">There is a good movie. lets watch...</string>
    <string name="message_release_today_reminder">%s has been released. Click to see.</string>
    <string name="message_dialog_daily">Are you sure disable daily reminder?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="message_dialog_release_today">Are you sure disable release today reminder?</string>
</resources>
