<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CoordinatorAtas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundTab">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/Theme.AppCompat.Light" />

        <RelativeLayout
            android:id="@+id/layoutAtas"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50dp"
            android:layout_below="@id/toolbar"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            app:layout_collapseMode="pin">

            <EditText
                android:id="@+id/txtSearch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_5dp"
                android:layout_toStartOf="@id/btnCari"
                android:background="@drawable/round"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:hint="@string/telusuri"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/margin_8dp"
                android:textColor="@color/blackThema"
                android:textColorHint="@color/text_standar"
                android:textSize="@dimen/size_text_15sp" />

            <Button
                android:id="@+id/btnCari"
                android:layout_width="@dimen/size_100dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/margin_5dp"
                android:background="@color/gplus_color_2"
                android:text="@string/cari"
                android:textColor="@color/blackThema"
                android:textSize="@dimen/size_text_standar" />
        </RelativeLayout>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/cariDulu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_10dp"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imgNoKoneksi"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_search_black_24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgNoKoneksi"
            android:gravity="center"
            android:text="@string/belum_melakukan_pencarian"
            android:textColor="@color/text_standar"
            android:textSize="@dimen/size_20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgNoKoneksi"
            android:layout_marginTop="@dimen/margin_10dp"
            android:gravity="center"
            android:text="@string/silahkan_cari_judul_film_yang_anda_inginkan_melalui_menu_pencarian_di_atas"
            android:textColor="@color/text_standar"
            android:textSize="@dimen/size_text_15sp" />
    </LinearLayout>

    <jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_list"></android.support.v7.widget.RecyclerView>
    </jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout>

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/loading"
        android:layout_width="@dimen/size_50dp"
        android:layout_height="@dimen/size_50dp"
        android:layout_gravity="center"
        app:indicatorColor="@color/colorPrimary"
        app:indicatorName="BallPulseIndicator" />

</android.support.design.widget.CoordinatorLayout>